--- a/app/src/main/res/drawable-hdpi/blue_btn_bg.xml
+++ b/app/src/main/res/drawable-hdpi/blue_btn_bg.xml
@@ -3,7 +3,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="#ffffff"></solid>
+    <solid android:color="@color/blue_btn"></solid>
 
     <padding
         android:bottom="0dp"
