--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -10,6 +10,18 @@
         android:layout_width="match_parent"
         android:layout_height="56dp"
         android:background="@color/theme_blue">
+        <LinearLayout
+            android:id="@+id/contacts_link"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="16dp"
+            android:layout_alignParentLeft="true"
+            android:alpha="0.5">
+            <ImageView
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:src="@drawable/ic_people_white_48dp"/>
+        </LinearLayout>
         <TextView
             android:id="@+id/logo"
             android:layout_width="wrap_content"
@@ -17,52 +29,26 @@
             android:layout_centerInParent="true"
             android:text="@string/app_name"
             android:textColor="@color/logo_color"
-            android:textSize="24sp"
+            android:textSize="@dimen/logo_size"
             android:textStyle="bold"/>
-    </RelativeLayout>
-    
-    <RelativeLayout
-        android:id="@+id/bottom_action_bar"
-        android:layout_width="match_parent"
-        android:layout_height="56dp"
-        android:background="#eeeeee"
-        android:layout_alignParentBottom="true">
         <LinearLayout
+            android:id="@+id/me_link"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="16dp"
-            android:layout_alignParentLeft="true">
+            android:layout_alignParentRight="true"
+            android:alpha="0.5">
             <ImageView
                 android:layout_width="24dp"
                 android:layout_height="24dp"
-                android:src="@drawable/ic_search_grey600_48dp"/>
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="12dp"
-            android:layout_centerInParent="true">
-            <ImageView
-                android:layout_width="32dp"
-                android:layout_height="32dp"
-                android:src="@drawable/ic_dialpad_grey600_48dp"/>
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="16dp"
-            android:layout_alignParentRight="true">
-            <ImageView
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:src="@drawable/ic_person_grey600_48dp"/>
+                android:src="@drawable/ic_mood_white_48dp"/>
         </LinearLayout>
     </RelativeLayout>
+
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_above="@id/bottom_action_bar"
         android:layout_below="@id/custom_action_bar">
         <LinearLayout
             android:layout_width="match_parent"
@@ -93,5 +79,26 @@
             <include layout="@layout/list_card"></include>
         </LinearLayout>
     </ScrollView>
+
+    <RelativeLayout
+        android:id="@+id/home_dialer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginBottom="16dp"
+        android:layout_marginRight="16dp">
+        <LinearLayout
+            android:layout_width="56dp"
+            android:layout_height="56dp"
+            android:layout_centerVertical="true"
+            android:padding="16dp"
+            android:background="@drawable/circle_dialer_btn">
+            <ImageView
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:src="@drawable/ic_dialpad_white_48dp"/>
+        </LinearLayout>
+    </RelativeLayout>
 
 </RelativeLayout>
