--- a/app/src/main/res/layout/activity_dialer.xml
+++ b/app/src/main/res/layout/activity_dialer.xml
@@ -2,38 +2,42 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.people.dialer"
-    android:background="@color/home_bg">
+    android:background="@color/home_bg"
+    tools:context="com.people.dialer">
 
     <RelativeLayout
         android:id="@+id/dialbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/theme_blue"
         android:layout_alignParentBottom="true"
+        android:background="@color/theme_blue"
         android:paddingBottom="16dp"
         android:paddingTop="16dp">
+
         <LinearLayout
             android:id="@+id/contacts_link"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="16dp"
-            android:layout_alignParentLeft="true">
+            android:layout_alignParentLeft="true"
+            android:padding="16dp">
+
             <ImageView
                 android:layout_width="24dp"
                 android:layout_height="24dp"
-                android:src="@drawable/ic_people_white_48dp"/>
+                android:src="@drawable/ic_people_white_48dp" />
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="56dp"
             android:layout_height="56dp"
-            android:padding="16dp"
             android:layout_centerInParent="true"
-            android:background="@drawable/circle_call_btn">
+            android:background="@drawable/circle_call_btn"
+            android:padding="16dp">
+
             <ImageView
                 android:layout_width="24dp"
                 android:layout_height="24dp"
-                android:src="@drawable/ic_phone_white_48dp"/>
+                android:src="@drawable/ic_phone_white_48dp" />
         </LinearLayout>
 
     </RelativeLayout>
@@ -44,301 +48,343 @@
         android:layout_height="wrap_content"
         android:layout_above="@id/dialbar"
         android:background="@color/theme_blue">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="56dp"
                 android:background="@color/white"
                 android:orientation="horizontal">
+
                 <EditText
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
+                    android:background="@color/white"
+                    android:cursorVisible="false"
                     android:gravity="center"
-                    android:textSize="40sp"
+                    android:maxLines="1"
                     android:paddingLeft="8dp"
                     android:paddingRight="8dp"
-                    android:maxLines="1"
                     android:singleLine="true"
-                    android:cursorVisible="false"
                     android:textColor="@color/c5"
-                    android:background="@color/white"/>
+                    android:textSize="40sp" />
+
                 <LinearLayout
                     android:layout_width="56dp"
                     android:layout_height="56dp"
                     android:padding="16dp">
+
                     <ImageView
                         android:layout_width="24dp"
                         android:layout_height="24dp"
-                        android:src="@drawable/ic_backspace_black_48dp"/>
+                        android:src="@drawable/ic_backspace_black_48dp" />
                 </LinearLayout>
             </LinearLayout>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="56dp"
                 android:orientation="horizontal">
+
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:gravity="center_horizontal"
                     android:orientation="horizontal">
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:layout_marginRight="4dp"
                         android:gravity="center"
-                        android:textColor="@color/white"
                         android:text="1"
-                        android:textSize="@dimen/dialpad_number"/>
+                        android:textColor="@color/white"
+                        android:textSize="@dimen/dialpad_number" />
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="vm"
                         android:textColor="@color/white"
-                        android:textSize="@dimen/dialpad_letter"/>
+                        android:textSize="@dimen/dialpad_letter" />
                 </LinearLayout>
+
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:gravity="center_horizontal"
                     android:orientation="horizontal">
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:layout_marginRight="4dp"
                         android:gravity="center"
-                        android:textColor="@color/white"
                         android:text="2"
-                        android:textSize="@dimen/dialpad_number"/>
+                        android:textColor="@color/white"
+                        android:textSize="@dimen/dialpad_number" />
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="abc"
                         android:textColor="@color/white"
-                        android:textSize="@dimen/dialpad_letter"/>
+                        android:textSize="@dimen/dialpad_letter" />
                 </LinearLayout>
+
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:gravity="center_horizontal"
                     android:orientation="horizontal">
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:layout_marginRight="4dp"
                         android:gravity="center"
-                        android:textColor="@color/white"
                         android:text="3"
-                        android:textSize="@dimen/dialpad_number"/>
+                        android:textColor="@color/white"
+                        android:textSize="@dimen/dialpad_number" />
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="def"
                         android:textColor="@color/white"
-                        android:textSize="@dimen/dialpad_letter"/>
+                        android:textSize="@dimen/dialpad_letter" />
                 </LinearLayout>
             </LinearLayout>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="56dp"
                 android:orientation="horizontal">
+
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:gravity="center_horizontal"
                     android:orientation="horizontal">
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:layout_marginRight="4dp"
                         android:gravity="center"
-                        android:textColor="@color/white"
                         android:text="4"
-                        android:textSize="@dimen/dialpad_number"/>
+                        android:textColor="@color/white"
+                        android:textSize="@dimen/dialpad_number" />
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="ghi"
                         android:textColor="@color/white"
-                        android:textSize="@dimen/dialpad_letter"/>
+                        android:textSize="@dimen/dialpad_letter" />
                 </LinearLayout>
+
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:gravity="center_horizontal"
                     android:orientation="horizontal">
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:layout_marginRight="4dp"
                         android:gravity="center"
-                        android:textColor="@color/white"
                         android:text="5"
-                        android:textSize="@dimen/dialpad_number"/>
+                        android:textColor="@color/white"
+                        android:textSize="@dimen/dialpad_number" />
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="jkl"
                         android:textColor="@color/white"
-                        android:textSize="@dimen/dialpad_letter"/>
+                        android:textSize="@dimen/dialpad_letter" />
                 </LinearLayout>
+
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:gravity="center_horizontal"
                     android:orientation="horizontal">
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:layout_marginRight="4dp"
                         android:gravity="center"
-                        android:textColor="@color/white"
                         android:text="6"
-                        android:textSize="@dimen/dialpad_number"/>
+                        android:textColor="@color/white"
+                        android:textSize="@dimen/dialpad_number" />
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="mno"
                         android:textColor="@color/white"
-                        android:textSize="@dimen/dialpad_letter"/>
+                        android:textSize="@dimen/dialpad_letter" />
                 </LinearLayout>
             </LinearLayout>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="56dp"
                 android:orientation="horizontal">
+
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:gravity="center_horizontal"
                     android:orientation="horizontal">
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:layout_marginRight="4dp"
                         android:gravity="center"
-                        android:textColor="@color/white"
                         android:text="7"
-                        android:textSize="@dimen/dialpad_number"/>
+                        android:textColor="@color/white"
+                        android:textSize="@dimen/dialpad_number" />
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="pqrs"
                         android:textColor="@color/white"
-                        android:textSize="@dimen/dialpad_letter"/>
+                        android:textSize="@dimen/dialpad_letter" />
                 </LinearLayout>
+
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:gravity="center_horizontal"
                     android:orientation="horizontal">
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:layout_marginRight="4dp"
                         android:gravity="center"
-                        android:textColor="@color/white"
                         android:text="8"
-                        android:textSize="@dimen/dialpad_number"/>
+                        android:textColor="@color/white"
+                        android:textSize="@dimen/dialpad_number" />
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="tuv"
                         android:textColor="@color/white"
-                        android:textSize="@dimen/dialpad_letter"/>
+                        android:textSize="@dimen/dialpad_letter" />
                 </LinearLayout>
+
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:gravity="center_horizontal"
                     android:orientation="horizontal">
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:layout_marginRight="4dp"
                         android:gravity="center"
-                        android:textColor="@color/white"
                         android:text="9"
-                        android:textSize="@dimen/dialpad_number"/>
+                        android:textColor="@color/white"
+                        android:textSize="@dimen/dialpad_number" />
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="wxyz"
                         android:textColor="@color/white"
-                        android:textSize="@dimen/dialpad_letter"/>
+                        android:textSize="@dimen/dialpad_letter" />
                 </LinearLayout>
             </LinearLayout>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="56dp"
                 android:orientation="horizontal">
+
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:gravity="center_horizontal"
                     android:orientation="horizontal">
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:layout_marginRight="4dp"
                         android:gravity="center"
-                        android:textColor="@color/white"
                         android:text="*"
-                        android:textSize="@dimen/dialpad_number"/>
+                        android:textColor="@color/white"
+                        android:textSize="@dimen/dialpad_number" />
                 </LinearLayout>
+
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:gravity="center_horizontal"
                     android:orientation="horizontal">
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:layout_marginRight="4dp"
                         android:gravity="center"
-                        android:textColor="@color/white"
                         android:text="0"
-                        android:textSize="@dimen/dialpad_number"/>
+                        android:textColor="@color/white"
+                        android:textSize="@dimen/dialpad_number" />
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="+"
                         android:textColor="@color/white"
-                        android:textSize="@dimen/dialpad_letter"/>
+                        android:textSize="@dimen/dialpad_letter" />
                 </LinearLayout>
+
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:gravity="center_horizontal"
                     android:orientation="horizontal">
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:layout_marginRight="4dp"
                         android:gravity="center"
-                        android:textColor="@color/white"
                         android:text="#"
-                        android:textSize="@dimen/dialpad_number"/>
+                        android:textColor="@color/white"
+                        android:textSize="@dimen/dialpad_number" />
                 </LinearLayout>
             </LinearLayout>
         </LinearLayout>
     </RelativeLayout>
-
 
 
 </RelativeLayout>
