--- a/app/src/main/res/layout/activity_me.xml
+++ b/app/src/main/res/layout/activity_me.xml
@@ -5,7 +5,7 @@
     android:background="@color/home_bg"
     tools:context="com.people.Me">
 
-    <RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
+    <!--<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@id/custom_action_bar"
         android:layout_width="match_parent"
         android:layout_height="56dp"
@@ -44,12 +44,11 @@
                 android:src="@drawable/ic_mood_white_48dp"/>
         </LinearLayout>
     </RelativeLayout>
-
+-->
     <RelativeLayout
         android:id="@+id/user_p_card"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/custom_action_bar"
         android:background="@color/theme_blue"
         android:layout_marginBottom="8dp">
         <RelativeLayout
