Revert "Added viewpager."
This reverts commit 86e24216e69f27eab7047511a4b7e3dbb6051ace.

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -5,62 +5,77 @@
     android:background="@color/home_bg"
     tools:context=".Home">
 
+    <RelativeLayout
+        android:id="@+id/custom_action_bar"
+        android:layout_width="match_parent"
+        android:layout_height="56dp"
+        android:background="@color/theme_blue">
+        <LinearLayout
+            android:id="@+id/contacts_link"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="16dp"
+            android:layout_alignParentLeft="true"
+            android:alpha="0.5">
+            <ImageView
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:src="@drawable/ic_people_white_48dp"/>
+        </LinearLayout>
+        <TextView
+            android:id="@+id/logo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:text="@string/app_name"
+            android:textColor="@color/logo_color"
+            android:textSize="@dimen/logo_size"
+            android:textStyle="bold"/>
+        <LinearLayout
+            android:id="@+id/me_link"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="16dp"
+            android:layout_alignParentRight="true"
+            android:alpha="0.5">
+            <ImageView
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:src="@drawable/ic_mood_white_48dp"/>
+        </LinearLayout>
+    </RelativeLayout>
+
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
+        android:layout_height="wrap_content"
+        android:layout_below="@id/custom_action_bar">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
-
             <include layout="@layout/section_header"></include>
-
             <include layout="@layout/list_card"></include>
-
             <include layout="@layout/list_card"></include>
-
             <include layout="@layout/list_card"></include>
-
             <include layout="@layout/section_header"></include>
-
             <include layout="@layout/list_card"></include>
-
             <include layout="@layout/list_card"></include>
-
             <include layout="@layout/list_card"></include>
-
             <include layout="@layout/list_card"></include>
-
             <include layout="@layout/list_card"></include>
-
             <include layout="@layout/list_card"></include>
-
             <include layout="@layout/section_header"></include>
-
             <include layout="@layout/list_card"></include>
-
             <include layout="@layout/list_card"></include>
-
             <include layout="@layout/list_card"></include>
-
             <include layout="@layout/list_card"></include>
-
             <include layout="@layout/list_card"></include>
-
+            <include layout="@layout/list_card"></include><include layout="@layout/list_card"></include>
             <include layout="@layout/list_card"></include>
-
             <include layout="@layout/list_card"></include>
-
             <include layout="@layout/list_card"></include>
-
             <include layout="@layout/list_card"></include>
-
-            <include layout="@layout/list_card"></include>
-
-            <include layout="@layout/list_card"></include>
-
             <include layout="@layout/list_card"></include>
         </LinearLayout>
     </ScrollView>
@@ -73,18 +88,16 @@
         android:layout_alignParentRight="true"
         android:layout_marginBottom="16dp"
         android:layout_marginRight="16dp">
-
         <LinearLayout
             android:layout_width="56dp"
             android:layout_height="56dp"
             android:layout_centerVertical="true"
-            android:background="@drawable/circle_dialer_btn"
-            android:padding="16dp">
-
+            android:padding="16dp"
+            android:background="@drawable/circle_dialer_btn">
             <ImageView
                 android:layout_width="24dp"
                 android:layout_height="24dp"
-                android:src="@drawable/ic_dialpad_white_48dp" />
+                android:src="@drawable/ic_dialpad_white_48dp"/>
         </LinearLayout>
     </RelativeLayout>
 
