--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -15,7 +15,34 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <include layout="@layout/section_header"></include>
+            <LinearLayout
+                android:id="@+id/home_search_bar"
+                android:orientation="horizontal"
+                style="@style/home_search_bar">
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/home_search_bar_text"
+                    android:layout_gravity="center_vertical"
+                    android:textSize="14sp"
+                    android:textColor="@color/c5"/>
+
+            </LinearLayout>
+
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="16dp">
+                <TextView
+                    style="@style/section_heading_text"
+                    android:text="Recents"/>
+                <TextView
+                    style="@style/view_all_dark"
+                    android:text="View all"/>
+
+            </RelativeLayout>
 
             <include layout="@layout/list_card"></include>
 
@@ -23,7 +50,15 @@
 
             <include layout="@layout/list_card"></include>
 
-            <include layout="@layout/section_header"></include>
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="16dp">
+                <TextView
+                    style="@style/section_heading_text"
+                    android:text="Favorites"/>
+            </RelativeLayout>
+
 
             <include layout="@layout/list_card"></include>
 
@@ -37,7 +72,14 @@
 
             <include layout="@layout/list_card"></include>
 
-            <include layout="@layout/section_header"></include>
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="16dp">
+                <TextView
+                    style="@style/section_heading_text"
+                    android:text="People on Hello"/>
+            </RelativeLayout>
 
             <include layout="@layout/list_card"></include>
 
