--- a/app/src/main/res/layout/history_card.xml
+++ b/app/src/main/res/layout/history_card.xml
@@ -4,12 +4,12 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
     <LinearLayout
-        android:id="@+id/list_card_id"
+        android:id="@+id/history_card_id"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="16dp"
         android:orientation="horizontal"
-        android:background="@color/list_card_bg">
+        android:background="@color/white">
         <ImageView
             android:layout_width="40dp"
             android:layout_height="40dp"
@@ -23,9 +23,20 @@
             <TextView
                 style="@style/user_name"
                 android:text="Name of the user"/>
-            <TextView
-                style="@style/user_status"
-                android:text="is now very busy"/>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <ImageView
+                    android:layout_width="16dp"
+                    android:layout_height="16dp"
+                    android:layout_marginRight="8dp"
+                    android:layout_marginTop="3dp"
+                    android:src="@drawable/ic_call_made_grey600_48dp"/>
+                <TextView
+                    style="@style/history_card_time"
+                    android:text="12 min ago" />
+            </LinearLayout>
         </LinearLayout>
         <LinearLayout
             android:layout_width="40dp"
