--- a/app/src/main/res/layout/message_text.xml
+++ b/app/src/main/res/layout/message_text.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_below="@id/custom_action_bar">
+    android:orientation="vertical">
     <TextView
-        android:id="@+id/section_header_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Send this message"
@@ -13,12 +11,10 @@
         android:textColor="@color/message_text_color"
         android:textSize="@dimen/message_text_size"/>
     <RelativeLayout
-        android:id="@+id/section_header_divider"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
-        android:layout_below="@id/section_header_label"
         android:background="@color/divider_color">
     </RelativeLayout>
-</RelativeLayout>
+</LinearLayout>
