--- a/app/src/main/res/layout/section_header.xml
+++ b/app/src/main/res/layout/section_header.xml
@@ -2,8 +2,7 @@
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/custom_action_bar">
+        android:layout_height="wrap_content">
         <TextView
             android:id="@+id/section_header_label"
             android:layout_width="wrap_content"
@@ -12,4 +11,8 @@
             android:padding="16dp"
             android:textColor="@color/section_heading_text"
             android:textSize="@dimen/section_heading_text"/>
+
+
+
+
     </RelativeLayout>
