--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -37,7 +37,7 @@
     <color name="user_p_status">#777777</color>
     <color name="user_p_call_bg">#4CAF50</color>
     <color name="user_p_call_text">#ffffff</color>
-    <color name="circle_btn_bg">#dedede</color>
+    <color name="circle_btn_bg">#cccccc</color>
 
     <color name="message_text_color">#333333</color>
     <color name="message_text_header">#777777</color>
